--- a/src/Packages/Factory/composer.json
+++ b/src/Packages/Factory/composer.json
@@ -10,15 +10,15 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/console": "^10.0|^11.0",
-        "illuminate/database": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0",
+        "php": "^8.3",
+        "illuminate/console": "^12.0",
+        "illuminate/database": "^12.0",
+        "illuminate/support": "^12.0",
         "fakerphp/faker": "^1.23"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0|^9.0"
+        "phpunit/phpunit": "^11.0",
+        "orchestra/testbench": "^10.3"
     },
     "autoload": {
         "psr-4": {
